# pepper_virtual

./: CMakeLists.txt  README.md  README.rst  package.xml
launch/: pepper_gazebo.launch  pepper_gazebo_plugin_Y20.launch
pepper_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_control/config/: pepper_position_control.yaml  pepper_trajectory_control.yaml
pepper_control/launch/: pepper_control_position.launch  pepper_control_trajectory.launch  pepper_control_trajectory_all.launch
pepper_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
pepper_gazebo_plugin/launch/: pepper_gazebo_plugin_Y20.launch
