<?xml version="1.0"?>
<package>
  <name>pepper_control</name>
  <version>0.0.4</version>
  <description>Control for Pepper robot</description>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>Apache 2.0</license>

  <url type="bugtracker">https://github.com/ros-naoqi/pepper_virtual/issues</url>
  <url type="repository">https://github.com/ros-naoqi/pepper_virtual.git</url>

  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
